--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="fr"> <!-- Modif language - Optimisation 5 // accessibility -->
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <!-- delete <meta meta name="keywords" content="seo, google.... agence design"> - Useless for SEO // SEO -->	
+	<meta name="description" content="Agence web à Lyon, experte en création de site sur mesure ! Développement web, Design, SEO, SEA. Optez pour un site UNIQUE, 100% adapté à vos besoins !"> <!-- Modif metadescription - Optimisation 4 // SEO -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
