--- a/page2.html
+++ b/page2.html
@@ -2,8 +2,8 @@
 <html lang="fr"> <!-- Modif language - Optimisation 5 // accessibility -->
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
+    <!-- delete <meta name="keywords" content=""> - Useless for SEO // SEO -->
+	<meta name="description" content="Agence web à Lyon, experte en création de site sur mesure ! Développement web, Design, SEO, SEA. Optez pour un site UNIQUE, 100% adapté à vos besoins !"> <!-- Modif metadescription - Optimisation 4 // SEO -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
