add a description for the index and page2 v4

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="fr"> <!-- Modif language - Optimisation 5 // accessibility -->
+<html lang="fr"> <!-- Modif language - Optimisation 1 // accessibility -->
 <head>
     <meta charset="utf-8">
     <!-- delete <meta meta name="keywords" content="seo, google.... agence design"> - Useless for SEO // SEO -->	
-	<meta name="description" content="Agence web à Lyon, experte en création de site sur mesure ! Développement web, Design, SEO, SEA. Optez pour un site UNIQUE, 100% adapté à vos besoins !"> <!-- Modif metadescription - Optimisation 4 // SEO -->
+	<meta name="description" content="Agence web à Lyon, experte en création de site sur mesure ! Développement web, Design, SEO, SEA. Optez pour un site UNIQUE, 100% adapté à vos besoins !"> <!-- Modif description - Optimisation 2 // SEO -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
