--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
 		<nav class="navbar row">
 			<div class="navbar-header">
                 <!-- delete <div class="keywords" ..."> - Useless for SEO // SEO -->
-				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40" /></a>
-                <!-- delete <div class="keywords" ..."> - Useless for SEO // SEO -->				
+				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="logo agence web la panthere lyon" height="40" /></a>
+                <!-- delete <div class="keywords" ..."> - Useless for SEO // SEO -->
+				<!-- change Alt text for image - // SEO and Accessibility -->				
 <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -62,7 +63,8 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Agence La Panthère, agence web paris, création logo paris" />
+				<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="logo agence web la panthere lyon" />
+				<!-- change Alt text for image - // SEO and Accessibility -->	
 				<h1 class="text-center hero-bloc-text tc-white ">
 					Agence La Panthère
 				</h1>
@@ -155,8 +157,9 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.webp" alt="paris web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" /></a>
+				<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.webp" alt="image refonte site web journal local" class="img-responsive portfolio-thumb" /></a>
 				<!-- Size of the image change - Optimisation 8 // Accessibility -->
+				<!-- change Alt text for image - // SEO and Accessibility -->	
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
 				</h3>
@@ -165,8 +168,9 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.webp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
+				<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.webp" class="img-responsive portfolio-thumb" alt="image refonte site web photographe" /></a>
 				<!-- Size of the image change - Optimisation 8 // Accessibility -->
+				<!-- change Alt text for image - // SEO and Accessibility -->	
 				<h3 class="mg-md text-center">
 					Création d'un site web pour photographes
 				</h3>
@@ -177,8 +181,9 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.webp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"/></a>
+				<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.webp" class="img-responsive portfolio-thumb" alt="image refonte site web pour voyageur"/></a>
 				<!-- Size of the image change - Optimisation 8 // Accessibility -->
+				<!-- change Alt text for image - // SEO and Accessibility -->	
 				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
 				</h3>
@@ -187,8 +192,9 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.webp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+				<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.webp" class="img-responsive portfolio-thumb" alt="image refonte site web d'un restaurant" /></a>
 				<!-- Size of the image change - Optimisation 8 // Accessibility -->
+				<!-- change Alt text for image - // SEO and Accessibility -->	
 				<h3 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
 				</h3>
