change of image text to text

--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
+				<h2>L'agence la Panthère est  une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet.</h2>
 			</div>
+			<!-- Change of text image into text and put as a h2 - Optimisation 10 // Accesibility & SEO -->
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
 			<div class="col-sm-4">
@@ -94,7 +95,7 @@
 					Web design
 				</h3>
 				<p class="text-center ">
-					Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
+					Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 				</p>
 			</div>
 			<div class="col-sm-4">
@@ -122,7 +123,8 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
+				<p> "L'agence la Panthère est une excellente agence web ! Les zeb designers int réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon"  Maxime Guibard, PDG de A vos fourchettes</p>
+				<!-- Change of text image into text - Optimisation 10 // Accesibility & SEO -->
 
 			</div>
 		</div>
@@ -152,7 +154,8 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
+				<h2>Nous travaillons avec beaucoup de clients, voici nos réalisations. </h2>
+				<!-- Change of text image into text and put as a h2- Optimisation 10 // Accesibility & SEO -->
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
